# iot-edge

samples/: CMakeLists.txt
samples/nodejs_real_device_sample/: CMakeLists.txt  README.md
samples/nodejs_real_device_sample/nodejs_modules/: iothub_writer.js  package.json  printer.js  sensor.js  sensortagTemperatureHumidity.js
samples/nodejs_real_device_sample/src/: gateway_sample_lin.json  gateway_sample_win.json
